Make it a cookiecutter template

--- a/{{cookiecutter.project_name}}/build.gradle
+++ b/{{cookiecutter.project_name}}/build.gradle
@@ -11,6 +11,9 @@ repositories {
 	jcenter()
 }
 
+group '{{cookiecutter.java_group}}'
+version '1.0-SNAPSHOT'
+
 java {
 	sourceCompatibility = JavaVersion.VERSION_11
 	targetCompatibility = JavaVersion.VERSION_11
